--- a/Views/Actors/Details.cshtml
+++ b/Views/Actors/Details.cshtml
@@ -31,9 +31,13 @@
                     </div>
 
                     <div class="form-group">
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
                         <a class="btn btn-danger text-white float-right" asp-action="Delete" asp-route-id="@Model.Id"><i class="bi bi-trash"></i>Delete </a>
+
                         <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+                    }
+                    <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
                 
             </div>
