--- a/Views/Producers/Details.cshtml
+++ b/Views/Producers/Details.cshtml
@@ -31,8 +31,12 @@
                     </div>
 
                     <div class="form-group">
-                    <a class="btn btn-danger text-white float-right" asp-controller="Producers" asp-action="Delete" asp-route-id="@Model.Id"><i class="bi bi-trash"></i>Delete </a>
-                    <a class="btn btn-outline-success float-right" asp-controller="Producers" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <a class="btn btn-danger text-white float-right" asp-controller="Producers" asp-action="Delete" asp-route-id="@Model.Id"><i class="bi bi-trash"></i>Delete </a>
+
+                        <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                    }
                     <a class="btn btn-outline-secondary" asp-controller="Producers" asp-action="Index">Show All</a>
                     </div>
                 
